--- a/pom.xml
+++ b/pom.xml
@@ -8,5 +8,12 @@
     <artifactId>cryptoimg</artifactId>
     <version>1.0</version>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.4</version>
+        </dependency>
+    </dependencies>
 
 </project>
